# radiance-cascades-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  config.h.in  git.diff  imgui.ini  run.sh
lib/: CMakeLists.txt
res/shaders/: broken.frag  default.vert  distfield.frag  draw.frag  draw_macos.frag  final.frag  gi.frag  gilastframe.frag  jfa.frag  lighting.frag  mask.frag  pong.frag  prep.frag  prepgi.frag  prepjfa.frag  prepscene.frag  rainbow.frag  rc.frag
src/: config.h.in  demo.cpp  demo.h  game.cpp  game.h  main.cpp
src/demo/: demo.cpp  demo.h  drawing_demo.cpp  drawing_demo.h  pong_demo.cpp  pong_demo.h
src/scene/: sandbox.h  scene.h
